# fastapi-realworld

./: .editorconfig  .gitignore  Makefile  notes.md  pyproject.toml  readme.md  setup.cfg
alembic/: env.py
alembic/versions/: 96846767953a_first_migration.py
app/: main.py
app/api/: api.py  deps.py
app/api/routers/: users.py
app/core/: security.py
app/crud/: crud_user.py
app/db/: base.py
app/models/: __init__.py  users.py
app/schemas/: users.py
postman/: README.md
tests/: conftest.py
tests/api/: test_users.py  test_users_async.py
tests/crud/: test_crud_user.py
tests/utils/: users.py
