[tool.poetry]
name = "fastapi-realworld"
version = "0.1.0"
description = "Realworld app API implementation using FastAPI"
authors = ["congdh <congdh2812@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
