[tool.poetry]
name = "fastapi-realworld"
version = "0.1.0"
description = "Realworld app API implementation using FastAPI"
authors = ["congdh <congdh2812@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
pytest-asyncio = "^0.14.0"
sqlalchemy = "^1.3.19"
pydantic = {version = "^1.6.1", extras = ["email"]}
python-jose = {version = "^3.2.0", extras = ["cryptography"]}
passlib = { version = "^1.7.2", extras = ["bcrypt"] }
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
requests = "^2.24.0"
httpx = "^0.14.2"
Faker = "^4.1.2"
devtools = "^0.6"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
black = { version = "^20.8b1", allow-prereleases = true }
isort = "^5.5.1"
mypy = "^0.782"
autoflake = "^1.4"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
